manifest/notificationservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: notification
  labels:
    app: notification
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 80
    targetPort: 3000
  selector:
    app: notification
