manifest/notificationingress.yaml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: notification
  name: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance

spec:
  rules:
   - host: dev-notification.vapprtech.com
   - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
               name: notification
               port:
                number: 80
